# api/gate/api/swagger.yaml
@@ -3717,9 +3717,9 @@ paths:
       tags:
       - "pipeline-controller"
       summary: "Evaluate a pipeline expression using the provided execution as context"
-      operationId: "evaluateExpressionForExecutionUsingPOST"
+      operationId: "evaluateExpressionForExecutionViaPOSTUsingPOST"
       consumes:
-      - "application/json"
+      - "text/plain"
       produces:
       - "*/*"
       parameters:
@@ -3729,12 +3729,13 @@ paths:
         required: true
         type: "string"
         x-exportParamName: "Id"
-      - name: "expression"
-        in: "query"
-        description: "expression"
+      - in: "body"
+        name: "pipelineExpression"
+        description: "pipelineExpression"
         required: true
-        type: "string"
-        x-exportParamName: "Expression"
+        schema:
+          type: "string"
+        x-exportParamName: "PipelineExpression"
       responses:
         200:
           description: "OK"
@@ -4084,6 +4085,100 @@ paths:
           description: "Forbidden"
         404:
           description: "Not Found"
+  /projects:
+    get:
+      tags:
+      - "project-controller"
+      summary: "Get all projects"
+      operationId: "allUsingGET_3"
+      consumes:
+      - "application/json"
+      produces:
+      - "*/*"
+      parameters: []
+      responses:
+        200:
+          description: "OK"
+          schema:
+            type: "array"
+            items:
+              type: "object"
+              properties: {}
+        401:
+          description: "Unauthorized"
+        403:
+          description: "Forbidden"
+        404:
+          description: "Not Found"
+  /projects/{id}:
+    get:
+      tags:
+      - "project-controller"
+      summary: "Get a project"
+      operationId: "getUsingGET_1"
+      consumes:
+      - "application/json"
+      produces:
+      - "*/*"
+      parameters:
+      - name: "id"
+        in: "path"
+        description: "id"
+        required: true
+        type: "string"
+        x-exportParamName: "Id"
+      responses:
+        200:
+          description: "OK"
+          schema:
+            type: "object"
+            additionalProperties:
+              type: "object"
+              properties: {}
+        401:
+          description: "Unauthorized"
+        403:
+          description: "Forbidden"
+        404:
+          description: "Not Found"
+  /projects/{id}/clusters:
+    get:
+      tags:
+      - "project-controller"
+      summary: "Get a project's clusters"
+      operationId: "getClustersUsingGET_3"
+      consumes:
+      - "application/json"
+      produces:
+      - "*/*"
+      parameters:
+      - name: "id"
+        in: "path"
+        description: "id"
+        required: true
+        type: "string"
+        x-exportParamName: "Id"
+      - name: "X-RateLimit-App"
+        in: "header"
+        description: "X-RateLimit-App"
+        required: false
+        type: "string"
+        x-exportParamName: "XRateLimitApp"
+        x-optionalDataType: "String"
+      responses:
+        200:
+          description: "OK"
+          schema:
+            type: "array"
+            items:
+              type: "object"
+              properties: {}
+        401:
+          description: "Unauthorized"
+        403:
+          description: "Forbidden"
+        404:
+          description: "Not Found"
   /projects/{id}/pipelines:
     get:
       tags:
@@ -4136,7 +4231,7 @@ paths:
       tags:
       - "pubsub-subscription-controller"
       summary: "Retrieve the list of pub/sub subscriptions configured in Echo."
-      operationId: "allUsingGET_3"
+      operationId: "allUsingGET_4"
       consumes:
       - "application/json"
       produces:
@@ -4239,7 +4334,7 @@ paths:
       - "security-group-controller"
       summary: "Retrieve a list of security groups, grouped by account, cloud provider,\
         \ and region"
-      operationId: "allUsingGET_4"
+      operationId: "allUsingGET_5"
       consumes:
       - "application/json"
       produces:
@@ -5406,7 +5501,7 @@ paths:
       tags:
       - "v-2-pipeline-templates-controller"
       summary: "Get a pipeline template."
-      operationId: "getUsingGET_1"
+      operationId: "getUsingGET_2"
       consumes:
       - "application/json"
       produces:
